[package]
name = "rcrm"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10"
argon2 = "0.5"
rand = "0.9"
hex = "0.4"
indicatif = "0.18"
dialoguer = "0.12"
clap = { version = "4", features = ["derive"] }
crc32fast = "1.5"
lazy_static = "1.5"
chacha20 = "0.9"
mimalloc = "*"
mime_guess = "2"
dunce = "1.0.5"

[dev-dependencies]
zip = "6"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
lto = true
