[workspace]
members = ["crates/rcrm-core", "crates/rcrm-server"]
resolver = "3"

[package]
name = "rcrm"
version = "0.1.0"
edition = "2024"

[dependencies]
rcrm-core = { path = "crates/rcrm-core" }
rcrm-server = { path = "crates/rcrm-server" }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
indicatif = "0.18"
mimalloc = { version = "*", features = ["v3"] }
dunce = "1.0.5"
zeroize = { version = "1.8.2", features = ["simd"] }
ctrlc = "3"

[dev-dependencies]
zip = "6"
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
base64 = "0.22"
crc32fast = "1.5"
chacha20 = "0.9"
zeroize = { version = "1.8.2", features = ["simd"] }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
lto = true
